# cmocka-branches

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README  cmocka_branches-build-tree-settings.cmake.in  cmocka_branches-config.cmake.in  cmocka_branches.pc.cmake
cmake/Modules/: findcmocka.cmake  findcmockabranches.cmake
include/: CMakeLists.txt  cmocka_branches.h
src/: CMakeLists.txt  cmocka_branches.c  cmocka_branches.def
tests/: CMakeLists.txt  test_branches.c
